# chemistry_calib

./: .gitignore  METHODOLOGY.md  README.md  VALIDATION_REPORT.md  build_steps_and_cfd_integration.md  chemistry_ml_framework.py  pyproject.toml  requirements.txt
cfd_cases/sige_dcs/: CASE.md  elementary_mechanism.json  surface_bc_udf.c
cfd_cases/sige_silane/: CASE.md  elementary_mechanism.json  surface_bc_udf.c
chem_ml/: __init__.py  active_learning.py  assembler.py  calibration.py  cli.py  config.py  contracts.py  data_store.py  features.py  identifiability.py  inference_plots.py  inverse_design.py  model_package.py  physics_core.py  pipeline.py  plots.py  reactor_transfer.py  registry.py  report.py  residual_nn.py  schema.py  spatial.py  spatial_ingest.py  workflows.py
chem_ml/cfd/: io.py  mechanism.py  transfer.py
data/raw/: tomasini_ds1.csv  tomasini_ds2_b.csv  tomasini_ds2_gr.csv  tomasini_ds3.csv  tomasini_ds4.csv
notebooks/: SIGE_SMALL_DATA_NOTEBOOK_PLAN.md  phase8_inverse_design_demo.py
tests/: test_active_learning.py  test_assembler.py  test_calibration.py  test_cfd.py  test_class_calibration.py  test_cli.py  test_cli_workflows.py  test_data_store.py  test_identifiability.py  test_inference_plots.py  test_inverse_design.py  test_model_package.py  test_physics_core.py  test_plots.py  test_reactor_transfer.py  test_residual_nn.py  test_schema.py  test_spatial.py  test_workflows.py
tools/: render_pipeline_flowchart.py
